--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-6">
-        <div class="card">
+        <div class="card mb-3">
             <img src="<%=campground.image%>" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title"><%=campground.title%></h5>
