--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,5 +1,9 @@
 <% layout('layouts/boilerplate') %>
 <link rel="stylesheet" href="/stylesheets/stars.css">
+<script>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+    const campground = <%-JSON.stringify(campground)%>;
+</script>
 
 <div class="row">
     <div class="col-6">
@@ -51,6 +55,7 @@
         </div>
     </div>
     <div class="col-6">
+        <div id='map' style='width: 400px; height: 300px;'></div>
         <% if(currentUser) { %>
         <h2>Leave a review</h2>
         <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
@@ -99,3 +104,4 @@
         <% } %>
     </div>
 </div>
+<script src="/javascripts/showPageMap.js"></script>
