--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+<div id="map" style="width: 100%; height: 500px"></div>
 <h1>All Campground</h1>
 <div>
     <a href="/campgrounds/new">New Campground</a>
@@ -28,3 +29,10 @@
     </div>
 </div>
 <%  } %>
+
+<script>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+const campgrounds = {features: <%-JSON.stringify(campgrounds)%>};
+</script>
+
+<script src="/javascripts/clusterMap.js"></script>
