--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,20 +1,33 @@
 <% layout('layouts/boilerplate') %>
-<h1>Register</h1>
-<form action="/register" method="POST" class="validated-form" novalidate>
-    <div class="mb-3">
-        <label class="form-label" for="username">Username</label>
-        <input type="text" class="form-control" id="username" name="username" required>
-        <div class="valid-feedback">Looks good</div>
+<div class="container d-flex justify-content-center align-items-center mt-5">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+            <div class="card shadow">
+                <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
+                    alt="" class="card-img-top" />
+                <div class="card-body">
+                    <h5 class="card-title">Register</h5>
+                    <form action="/register" method="POST" class="validated-form" novalidate>
+                        <div class="mb-3">
+                            <label class="form-label" for="username">Username</label>
+                            <input type="text" class="form-control" id="username" name="username" autofocus required>
+                            <div class="valid-feedback">Looks good</div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="email">email</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                            <div class="valid-feedback">Looks good</div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="password">password</label>
+                            <input type="password" class="form-control" id="password" name="password" required>
+                            <div class="valid-feedback">Looks good</div>
+                        </div>
+                        <button class="btn btn-success col-12">Register</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="mb-3">
-        <label class="form-label" for="email">email</label>
-        <input type="email" class="form-control" id="email" name="email" required>
-        <div class="valid-feedback">Looks good</div>
-    </div>
-    <div class="mb-3">
-        <label class="form-label" for="password">password</label>
-        <input type="password" class="form-control" id="password" name="password" required>
-        <div class="valid-feedback">Looks good</div>
-    </div>
-    <button class="btn btn-success">Register</button>
-</form>
+</div>
+
